hildon-fm (0.20-1) unstable; urgency=low

  * UNRELEASED
  * Did packaging fixes to appease lintian.
  * Added thumb instruction support (N#26673).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 22 Apr 2006 14:06:31 +0300

hildon-fm (0.19-1) unstable; urgency=low

  * Added dbus_connection_ref() to match the dbus_connection_unref(),
    fixes a crash (N#25650).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 12 Apr 2006 18:56:48 +0300

hildon-fm (0.18-1) unstable; urgency=low

  * Fixed several UI string issues (N#12997, N#23288, N#24520, N#25076,
    N#25953, N#25964, N#26024).
  * Added hildon-file-common-private.h for common definitions.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 11 Apr 2006 14:53:44 +0300

hildon-fm (0.17-1) unstable; urgency=low

  * Now using new Connectivity GConf API (N#25139).
  * Fixed the updating infobanner.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 03 Apr 2006 15:03:26 +0300

hildon-fm (0.16-1) unstable; urgency=low

  * Replaced some asserts with proper run-time error checking.
  * Fixed DBus porting bugs (N#22848).
  * Fixed dependency to l10n packages.
  * Fixed logical strings to be in lower case.
  * Added a hack for the UI string bug.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 22 Mar 2006 16:04:47 +0200

hildon-fm (0.15-2) unstable; urgency=low

  * Added build dependency to hildon-libs-dev >= 0.12.0.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Thu, 23 Feb 2006 14:26:40 +0200

hildon-fm (0.15-1) unstable; urgency=low

    Luc Pionchon:
  * Moved hildon-file-details-dialog from hildon-libs to hildon-fm.
  * debian/control: removed dependency on hildon-lgpl
  * debian/control: updated dependency on hildon-libs to 0.12.0

    Kimmo:
  * Applied Gdk thread locking code patch from maintenance branch.
  * Applied a patch from Murray Cumming (M#182).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 22 Feb 2006 15:52:01 +0200
