@@ -3,6 +3,7 @@ hildon-fm (0.20-1) unstable; urgency=low
   * UNRELEASED
   * Did packaging fixes to appease lintian.
   * Added thumb instruction support (N#26673).
+  * Added movable vertical separator to file selection (N#24207).
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 22 Apr 2006 14:06:31 +0300
 
